# advent-of-code-2020

./: Cargo.toml  README.md
day01/: task1.rs  task2.rs
day02/: task1.rs  task2.rs
day03/: task1.rs  task2.rs
day04/: task1.rs  task2.rs
day05/: task1.rs  task2.rs
day06/: task1.rs  task2.rs
day07/: task1.rs  task2.rs
