[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Mateusz Hurbol <mateusz.hurbol42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "day01_1"
path = "day01/task1.rs"
[[bin]]
name = "day01_2"
path = "day01/task2.rs"
[[bin]]
name = "day02_1"
path = "day02/task1.rs"
[[bin]]
name = "day02_2"
path = "day02/task2.rs"