[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Mateusz Hurbol <mateusz.hurbol42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.2"
[[bin]]
name = "day01_1"
path = "day01/task1.rs"
[[bin]]
name = "day01_2"
path = "day01/task2.rs"
[[bin]]
name = "day02_1"
path = "day02/task1.rs"
[[bin]]
name = "day02_2"
path = "day02/task2.rs"
[[bin]]
name = "day03_1"
path = "day03/task1.rs"
[[bin]]
name = "day03_2"
path = "day03/task2.rs"
[[bin]]
name = "day04_1"
path = "day04/task1.rs"
[[bin]]
name = "day04_2"
path = "day04/task2.rs"
[[bin]]
name = "day05_1"
path = "day05/task1.rs"
[[bin]]
name = "day05_2"
path = "day05/task2.rs"
[[bin]]
name = "day06_1"
path = "day06/task1.rs"
[[bin]]
name = "day06_2"
path = "day06/task2.rs"